--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   http: ^0.13.4
   charts_flutter: ^0.12.0
   syncfusion_flutter_charts: ^20.1.55
+  flutter_web_browser: ^0.17.1
 
 dev_dependencies:
   flutter_test:
